--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                 const loader = new THREE.GLTFLoader();
 
                 // ** METE AQUI O TEU FICHEIRO GLB PARA O SITE FICAR COM O MEU 3D LÁ DENTRO **
-                const glbPath = 'caminho/para/o/teu/ficheiro.glb'; // <-- SUBSTITUA ESTE CAMINHO!
+                const glbPath = 'mclaren.glb'; // <-- SUBSTITUA ESTE CAMINHO!
                 
                 loader.load(
                     glbPath,
