--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </a>
                 
                 <div class="w-full max-w-2xl h-64 md:h-96 rounded-3xl mx-auto flex items-center justify-center text-gray-300 text-xl font-bold border-4 border-white/10 animate-on-scroll hero-visual-bg" style="transition-delay: 0.6s;">
-                     <a href="mclaren.glb">
+                    <canvas id="floating-3d-model"></canvas>
                 </div>
 
             </section>
