--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
             height: 100% !important;
             display: block;
         }
+        #floating-3d-model2 {
+            width: 100% !important;
+            height: 100% !important;
+            display: block;
+        }
 
         /* Feature Box Highlight (apenas para hover) */
         .feature-box {
@@ -259,7 +264,7 @@
                 </a>
                 
                 <div class="w-full max-w-2xl h-64 md:h-96 rounded-3xl mx-auto flex items-center justify-center text-gray-300 text-xl font-bold border-4 border-white/10 animate-on-scroll hero-visual-bg" style="transition-delay: 0.6s;">
-                    <canvas id="floating-3d-model"></canvas>
+                    <canvas id="floating-3d-model2"></canvas>
                 </div>
 
             </section>
@@ -402,7 +407,7 @@
                 <p class="text-xl text-gray-400 max-w-2xl mx-auto mb-10 animate-on-scroll" style="transition-delay: 0.1s;">
                     Seja um projeto de Realidade Aumentada revolucionário ou uma modelagem 3D de precisão, a AXIS.Design está pronta para começar.
                 </p>
-                <a href="mailto:ola@axis.design" class="btn-primary text-xl font-semibold py-4 px-12 rounded-full animate-on-scroll" style="transition-delay: 0.2s;">
+                <a href="mailto:alexandrexbdcosme@gmail.com" class="btn-primary text-xl font-semibold py-4 px-12 rounded-full animate-on-scroll" style="transition-delay: 0.2s;">
                     Discutir a Sua Ideia
                 </a>
             </section>
