--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             border: 1px solid rgba(255, 255, 255, 0.2); 
             color: #f3f4f6; /* Texto branco */
             transition: all 0.4s ease;
-            position: relative;
+            position: center;
             overflow: hidden; 
             box-shadow: 0 0 0 rgba(99, 102, 241, 0); /* Sem brilho inicial */
         }
